--- a/index.html
+++ b/index.html
@@ -14,18 +14,8 @@
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
 	 crossorigin="anonymous">
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<link rel="stylesheet" href="https://rawgit.com/escottj/MortgageCalculator/master/css/myStyle.css">
-	<script>
-		(function (i, s, o, g, r, a, m) {
-		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-			(i[r].q = i[r].q || []).push(arguments)
-		}, i[r].l = 1 * new Date(); a = s.createElement(o),
-			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-		ga('create', 'UA-101851721-1', 'auto');
-		ga('send', 'pageview');
-	</script>
 </head>
 
 <body>
@@ -133,83 +123,113 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div id="interest-rate-group" class="form-group form-group-md nopadding required">
-					<label id="interest-rate-label" class="col-sm-3 control-label" for="formGroupInputSmall">Interest Rate (APR)/Loan Term</label>
-					<p>
+			<div class="hidden-xs">
+				<div class="row">
+					<div id="interest-rate-group" class="form-group form-group-md nopadding required">
+						<label id="interest-rate-label" class="col-sm-3 control-label" for="formGroupInputSmall">Interest Rate (APR)</label>
 						<div id="interest-rate-10-check" class="col-sm-2">
 							<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 								<input type="text" class="form-control input-md" id="interest-rate-10" placeholder="10 yr APR" value="3.125" aria-describedby="interest-rate-10-block">
 								<span id="interest-rate-10-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 								<div class="input-group-addon">%</div>
 							</div>
-							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(10)" value="10">10 years</button>
 							<span style="display: none;" id="interest-rate-10-help-block" class="help-block">Please enter a value no larger than 20.</span>
 						</div>
-					</p>
-					<p>
 						<div id="interest-rate-15-check" class="col-sm-2">
 							<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 								<input type="text" class="form-control input-md" id="interest-rate-15" placeholder="15 yr APR" value="3.250" aria-describedby="interest-rate-15-block">
 								<span id="interest-rate-15-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 								<div class="input-group-addon">%</div>
 							</div>
-							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(15)" value="15">15 years</button>
 							<span style="display: none;" id="interest-rate-15-help-block" class="help-block">Please enter a value no larger than 20.</span>
 						</div>
-					</p>
-					<p>
 						<div id="interest-rate-20-check" class="col-sm-2">
 							<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 								<input type="text" class="form-control input-md" id="interest-rate-20" placeholder="20 yr APR" value="3.750" aria-describedby="interest-rate-20-block">
 								<span id="interest-rate-20-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 								<div class="input-group-addon">%</div>
 							</div>
-							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(20)" value="20">20 years</button>
 							<span style="display: none;" id="interest-rate-20-help-block" class="help-block">Please enter a value no larger than 20.</span>
 						</div>
-					</p>
-					<p>
 						<div id="interest-rate-30-check" class="col-sm-2">
 							<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 								<input type="text" class="form-control input-md" id="interest-rate-30" placeholder="30 yr APR" value="4.025" aria-describedby="interest-rate-30-block">
 								<span id="interest-rate-30-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
 								<div class="input-group-addon">%</div>
 							</div>
-							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(30)" value="30">30 years</button>
 							<span style="display: none;" id="interest-rate-30-help-block" class="help-block">Please enter a value no larger than 20.</span>
 						</div>
-					</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="form-group form-group-md nopadding">
+						<label class="col-sm-3 control-label" for="formGroupInputSmall">Loan Term</label>
+						<div class="col-sm-2">
+							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(10)" value="10">10 years</button>
+						</div>
+						<div class="col-sm-2">
+							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(15)" value="15">15 years</button>
+						</div>
+						<div class="col-sm-2">
+							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(20)" value="20">20 years</button>
+						</div>
+						<div class="col-sm-2">
+							<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(30)" value="30">30 years</button>
+						</div>
+						<div class="col-sm-8 col-sm-offset-3">
+							<p></p><button type="button" id="loan-term" class="btn-block btn btn-success btn-md" onclick="calculate(0)" value="0">Compare All</button>
+						</div>
+						<div class="col-sm-8 col-sm-offset-3">
+							<p></p><button type="button" id="reset" class="btn-block btn btn-danger btn-md" onclick="resetAll();">Reset</button>
+						</div>
+					</div>
 				</div>
 			</div>
-			<!--<div class="row">
-				<div class="form-group form-group-md nopadding">
-					<label class="col-sm-3 control-label" for="formGroupInputSmall">Loan Term</label>
-					<div class="col-sm-2">
-						<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(10)" value="10">10 years</button>
-					</div>
-					<div class="col-sm-2">
-						<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(15)" value="15">15 years</button>
-					</div>
-					<div class="col-sm-2">
-						<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(20)" value="20">20 years</button>
-					</div>
-					<div class="col-sm-2">
-						<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(30)" value="30">30 years</button>
+			<div class="visible-xs">
+				<div class="row">
+					<div id="interest-rate-apr-group" class="form-group form-group-md nopadding required">
+						<label id="interest-rate-apr-label" class="col-sm-3 control-label" for="formGroupInputSmall">Interest Rate (APR)</label>
+						<div id="interest-rate-apr-check" class="col-sm-2">
+							<div class="input-group mb-2 mr-sm-2 mb-sm-0">
+								<input type="text" class="form-control input-md" id="interest-rate-apr" placeholder="APR" value="3.250" aria-describedby="interest-rate-apr-block">
+								<span id="interest-rate-apr-glyph" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+								<div class="input-group-addon">%</div>
+							</div>
+							<span style="display: none;" id="interest-rate-apr-help-block" class="help-block">Please enter a value no larger than 20.</span>
+						</div>
 					</div>
 				</div>
-			</div>-->
-			<div class="row">
-				<div class="form-group form-group-md nopadding">
-					<div class="col-sm-8 col-sm-offset-3">
-						<button type="button" id="loan-term" class="btn-block btn btn-success btn-md" onclick="calculate(0)" value="0">Compare All</button>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="form-group form-group-md nopadding">
-					<div class="col-sm-8 col-sm-offset-3">
-						<button type="button" id="reset" class="btn-block btn btn-danger btn-md" onclick="resetAll();">Reset</button>
+				<div class="row">
+					<div class="form-group form-group-md nopadding">
+						<label class="col-sm-3 control-label" for="formGroupInputSmall">Loan Term</label>
+						<p>
+							<div class="col-sm-2">
+								<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(10)" value="10">10 years</button>
+							</div>
+						</p>
+						<p>
+							<div class="col-sm-2">
+								<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(15)" value="15">15 years</button>
+							</div>
+						</p>
+						<p>
+							<div class="col-sm-2">
+								<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(20)" value="20">20 years</button>
+							</div>
+						</p>
+						<p>
+							<div class="col-sm-2">
+								<button type="button" id="loan-term" class="btn-block btn btn-primary btn-md" onclick="calculate(30)" value="30">30 years</button>
+							</div>
+						</p>
+						<p>
+							<div class="col-sm-8 col-sm-offset-3">
+								<button type="button" id="loan-term" class="btn-block btn btn-success btn-md" onclick="calculate(0)" value="0">Compare All</button>
+							</div>
+						</p>
+						<div class="col-sm-8 col-sm-offset-3">
+							<button type="button" id="reset" class="btn-block btn btn-danger btn-md" onclick="resetAll();">Reset</button>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -217,13 +237,31 @@
 	</div>
 	<p>
 		<div class="container col-sm-12">
-			<div class="table-responsive">
-				<table class="table table-striped table-hover" align="center">
-					<tbody id="table8">
-					</tbody>
-				</table>
-				</dvi>
+			<ul class="nav nav-tabs" id="myTab">
+				<li id="tab1" class="active">
+					<a href="#table" data-toggle="tab">Table</a>
+				</li>
+				<li id="tab2">
+					<a id="chartsTab" href="#charts" data-toggle="tab">Charts</a>
+				</li>
+			</ul>
+			<div class="tab-content">
+				<div class="tab-pane" id="table">
+					<div class="table-responsive">
+						<table class="table table-striped table-hover" align="center">
+							<tbody id="table8">
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="tab-pane" id="charts">
+					<div id="graph">
+						<div id="chart_div"></div>
+						<div id="piechart"></div>
+					</div>
+				</div>
 			</div>
+		</div>
 	</p>
 	</div>
 </body>
