--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 	 crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
@@ -18,10 +20,10 @@
 	<link rel="stylesheet" href="https://rawgit.com/escottj/MortgageCalculator/master/css/myStyle.css">
 	<script>
 		(function (i, s, o, g, r, a, m) {
-		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-			(i[r].q = i[r].q || []).push(arguments)
-		}, i[r].l = 1 * new Date(); a = s.createElement(o),
-			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
 		ga('create', 'UA-101851721-1', 'auto');
@@ -38,7 +40,7 @@
 					<div id="home-cost-check" class="col-sm-4">
 						<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 							<div class="input-group-addon">$</div>
-							<input type="text" class="form-control" id="home-cost2" placeholder="Home Cost" value="300,000.00" aria-describedby="home-cost-help-block">
+							<input type="text" class="form-control" id="home-cost" placeholder="Home Cost" value="300,000.00" aria-describedby="home-cost-help-block">
 							<span id="home-cost-glyph" class="glyphicon form-control-feedback glyphicon-right" aria-hidden="true"></span>
 						</div>
 						<span style="display: none;" id="home-cost-help-block" class="help-block">Please enter a value between 10,000 and 1,000,000,000.</span>
@@ -272,54 +274,175 @@
 			</div>
 			</p>
 			</div>-->
-	<table class="table table-striped" align="center">
-		<tbody id="table8">
-			<tr>
-				<th class="mergedTitle" colspan="100%">Home Details</th>
-			</tr>
-			<tr id="home-cost">
-				<th>Home Cost</th>
-				<td id="0">300,000.00</td>
-				<td id="1">300,000.00</td>
-				<td id="2">300,000.00</td>
-				<td id="3">300,000.00</td>
-				<td id="4">300,000.00</td>
-			</tr>
-			<tr>
-				<th>Square Footage</th>
-				<td id="0">2,900</td>
-				<td id="1">2,900</td>
-				<td id="2">2,900</td>
-				<td id="3">2,900</td>
-				<td id="4">2,900</td>
-			</tr>
-			<tr>
-				<th>Price per Square Foot</th>
-				<td id="0">$103.45</td>
-				<td id="1">$103.45</td>
-				<td id="2">$103.45</td>
-				<td id="3">$103.45</td>
-				<td id="4">$103.45</td>
-			</tr>
-			<tr>
-				<th>Property Tax Rate</th>
-				<td id="0">0.840%</td>
-				<td id="1">0.840%</td>
-				<td id="2">0.840%</td>
-				<td id="3">0.840%</td>
-				<td id="4">0.840%</td>
-			</tr>
-			<tr>
-				<th style="background-color: white;"></th>
-				<td id="0" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('0')">Delete</button></td>
-				<td id="1" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('1')">Delete</button></td>
-				<td id="2" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('2')">Delete</button></td>
-				<td id="3" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('3')">Delete</button></td>
-				<td id="4" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('4')">Delete</button></td>
-			</tr>
-		</tbody>
-	</table>
-
+	<div class="container col-sm-12">
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="table-responsive">
+					<table class="table table-striped" align="center">
+						<tbody id="table8">
+							<tr>
+								<th class="mergedTitle" colspan="100%">Home Details</th>
+							</tr>
+							<tr id="home-cost">
+								<th>Home Cost</th>
+								<td id="0">$100,000.00</td>
+								<td id="1">$200,000.00</td>
+								<td id="2">$300,000.00</td>
+								<td id="3">$400,000.00</td>
+								<td id="4">$500,000.00</td>
+							</tr>
+							<tr id="down-payment-dollars">
+								<th>Down Payment Amount</th>
+								<td id="0">$20,000.00</td>
+								<td id="1">$40,000.00</td>
+								<td id="2">$60,000.00</td>
+								<td id="3">$80,000.00</td>
+								<td id="4">$100,000.00</td>
+							</tr>
+							<tr id="down-payment">
+								<th>Down Payment Percent</th>
+								<td id="0">20.000%</td>
+								<td id="1">20.000%</td>
+								<td id="2">20.000%</td>
+								<td id="3">20.000%</td>
+								<td id="4">20.000%</td>
+							</tr>
+							<tr id="property-tax-rate">
+								<th>Property Tax Rate</th>
+								<td id="0">.840%</td>
+								<td id="1">.840%</td>
+								<td id="2">.840%</td>
+								<td id="3">.840%</td>
+								<td id="4">.840%</td>
+							</tr>
+							<tr id="hoi">
+								<th>Home Owner's Insurance</th>
+								<td id="0">$100.00</td>
+								<td id="1">$100.00</td>
+								<td id="2">$100.00</td>
+								<td id="3">$100.00</td>
+								<td id="4">$100.00</td>
+							</tr>
+							<tr id="pmi">
+								<th>PMI</th>
+								<td id="0">1.000%</td>
+								<td id="1">1.000%</td>
+								<td id="2">1.000%</td>
+								<td id="3">1.000%</td>
+								<td id="4">1.000%</td>
+							</tr>
+							<tr id="hoa">
+								<th>HOA</th>
+								<td id="0">$100.00</td>
+								<td id="1">$100.00</td>
+								<td id="2">$100.00</td>
+								<td id="3">$100.00</td>
+								<td id="4">$100.00</td>
+							</tr>
+							<tr id="extra-payment">
+								<th>Extra Payment</th>
+								<td id="0">$100.00</td>
+								<td id="1">$100.00</td>
+								<td id="2">$100.00</td>
+								<td id="3">$100.00</td>
+								<td id="4">$100.00</td>
+							</tr>
+							<tr id="interest-rate">
+								<th>Interest Rate (APR)</th>
+								<td id="0">3.250%</td>
+								<td id="1">3.250%</td>
+								<td id="2">3.250%</td>
+								<td id="3">3.250%</td>
+								<td id="4">3.250%</td>
+							</tr>
+							<tr id="loan-term">
+								<th>Loan Term</th>
+								<td id="0">
+									<div class="btn-group">
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">10 years <span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">10 years</a></li>
+											<li><a href="#">15 years</a></li>
+											<li><a href="#">20 years</a></li>
+											<li><a href="#">30 years</a></li>
+										</ul>
+									</div>
+								</td>
+								<td id="1">
+									<div class="btn-group">
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">15 years <span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">10 years</a></li>
+											<li><a href="#">15 years</a></li>
+											<li><a href="#">20 years</a></li>
+											<li><a href="#">30 years</a></li>
+										</ul>
+									</div>
+								</td>
+								<td id="2">
+									<div class="btn-group">
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">15 years <span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">10 years</a></li>
+											<li><a href="#">15 years</a></li>
+											<li><a href="#">20 years</a></li>
+											<li><a href="#">30 years</a></li>
+										</ul>
+									</div>
+								</td>
+								<td id="3">
+									<div class="btn-group">
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">20 years <span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">10 years</a></li>
+											<li><a href="#">15 years</a></li>
+											<li><a href="#">20 years</a></li>
+											<li><a href="#">30 years</a></li>
+										</ul>
+									</div>
+								</td>
+								<td id="4">
+									<div class="btn-group">
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">30 years <span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">10 years</a></li>
+											<li><a href="#">15 years</a></li>
+											<li><a href="#">20 years</a></li>
+											<li><a href="#">30 years</a></li>
+										</ul>
+									</div>
+								</td>
+							</tr>
+							<tr id="square-footage">
+								<th>Square Footage</th>
+								<td id="0">1,900</td>
+								<td id="1">2,900</td>
+								<td id="2">3,900</td>
+								<td id="3">4,900</td>
+								<td id="4">5,900</td>
+							</tr>
+							<tr id="price-per-square-foot">
+								<th>Price per Square Foot</th>
+								<td id="0">$103.45</td>
+								<td id="1">$103.45</td>
+								<td id="2">$103.45</td>
+								<td id="3">$103.45</td>
+								<td id="4">$103.45</td>
+							</tr>
+							<tr id="delete">
+								<th style="background-color: white;"></th>
+								<td id="0" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('0')">Delete</button></td>
+								<td id="1" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('1')">Delete</button></td>
+								<td id="2" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('2')">Delete</button></td>
+								<td id="3" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('3')">Delete</button></td>
+								<td id="4" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('4')">Delete</button></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 <script type="text/javascript" src="https://rawgit.com/escottj/MortgageCalculator/master/js/myJava.js"></script>
 <script type="text/javascript" src="https://rawgit.com/escottj/MortgageCalculator/master/js/myJavaBeta.js"></script>
