--- a/index.html
+++ b/index.html
@@ -280,10 +280,7 @@
 				<div class="table-responsive">
 					<table class="table table-striped" align="center">
 						<tbody id="table8">
-							<tr>
-								<th class="mergedTitle" colspan="100%">Home Details</th>
-							</tr>
-							<tr id="home-cost">
+							<tr id="-home-cost">
 								<th>Home Cost</th>
 								<td id="0">$100,000.00</td>
 								<td id="1">$200,000.00</td>
@@ -291,7 +288,7 @@
 								<td id="3">$400,000.00</td>
 								<td id="4">$500,000.00</td>
 							</tr>
-							<tr id="down-payment-dollars">
+							<tr id="-down-payment-dollars">
 								<th>Down Payment Amount</th>
 								<td id="0">$20,000.00</td>
 								<td id="1">$40,000.00</td>
@@ -299,7 +296,7 @@
 								<td id="3">$80,000.00</td>
 								<td id="4">$100,000.00</td>
 							</tr>
-							<tr id="down-payment">
+							<tr id="-down-payment">
 								<th>Down Payment Percent</th>
 								<td id="0">20.000%</td>
 								<td id="1">20.000%</td>
@@ -307,7 +304,7 @@
 								<td id="3">20.000%</td>
 								<td id="4">20.000%</td>
 							</tr>
-							<tr id="property-tax-rate">
+							<tr id="-property-tax-rate">
 								<th>Property Tax Rate</th>
 								<td id="0">.840%</td>
 								<td id="1">.840%</td>
@@ -315,7 +312,7 @@
 								<td id="3">.840%</td>
 								<td id="4">.840%</td>
 							</tr>
-							<tr id="hoi">
+							<tr id="-hoi">
 								<th>Home Owner's Insurance</th>
 								<td id="0">$100.00</td>
 								<td id="1">$100.00</td>
@@ -323,7 +320,7 @@
 								<td id="3">$100.00</td>
 								<td id="4">$100.00</td>
 							</tr>
-							<tr id="pmi">
+							<tr id="-pmi">
 								<th>PMI</th>
 								<td id="0">1.000%</td>
 								<td id="1">1.000%</td>
@@ -331,7 +328,7 @@
 								<td id="3">1.000%</td>
 								<td id="4">1.000%</td>
 							</tr>
-							<tr id="hoa">
+							<tr id="-hoa">
 								<th>HOA</th>
 								<td id="0">$100.00</td>
 								<td id="1">$100.00</td>
@@ -339,7 +336,7 @@
 								<td id="3">$100.00</td>
 								<td id="4">$100.00</td>
 							</tr>
-							<tr id="extra-payment">
+							<tr id="-extra-payment">
 								<th>Extra Payment</th>
 								<td id="0">$100.00</td>
 								<td id="1">$100.00</td>
@@ -347,7 +344,7 @@
 								<td id="3">$100.00</td>
 								<td id="4">$100.00</td>
 							</tr>
-							<tr id="interest-rate">
+							<tr id="-interest-rate">
 								<th>Interest Rate (APR)</th>
 								<td id="0">3.250%</td>
 								<td id="1">3.250%</td>
@@ -355,65 +352,68 @@
 								<td id="3">3.250%</td>
 								<td id="4">3.250%</td>
 							</tr>
-							<tr id="loan-term">
+							<tr id="-loan-term">
 								<th>Loan Term</th>
 								<td id="0">
 									<div class="btn-group">
-										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">10 years <span class="caret"></span></a>
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">10 years <span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="#">10 years</a></li>
-											<li><a href="#">15 years</a></li>
-											<li><a href="#">20 years</a></li>
-											<li><a href="#">30 years</a></li>
+											<li><a>10 years</a></li>
+											<li><a>15 years</a></li>
+											<li><a>20 years</a></li>
+											<li><a>30 years</a></li>
 										</ul>
 									</div>
 								</td>
 								<td id="1">
 									<div class="btn-group">
-										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">15 years <span class="caret"></span></a>
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">15 years <span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="#">10 years</a></li>
-											<li><a href="#">15 years</a></li>
-											<li><a href="#">20 years</a></li>
-											<li><a href="#">30 years</a></li>
+											<li><a>10 years</a></li>
+											<li><a>15 years</a></li>
+											<li><a>20 years</a></li>
+											<li><a>30 years</a></li>
 										</ul>
 									</div>
 								</td>
 								<td id="2">
 									<div class="btn-group">
-										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">15 years <span class="caret"></span></a>
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">15 years <span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="#">10 years</a></li>
-											<li><a href="#">15 years</a></li>
-											<li><a href="#">20 years</a></li>
-											<li><a href="#">30 years</a></li>
+											<li><a>10 years</a></li>
+											<li><a>15 years</a></li>
+											<li><a>20 years</a></li>
+											<li><a>30 years</a></li>
 										</ul>
 									</div>
 								</td>
 								<td id="3">
 									<div class="btn-group">
-										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">20 years <span class="caret"></span></a>
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">20 years <span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="#">10 years</a></li>
-											<li><a href="#">15 years</a></li>
-											<li><a href="#">20 years</a></li>
-											<li><a href="#">30 years</a></li>
+											<li><a>10 years</a></li>
+											<li><a>15 years</a></li>
+											<li><a>20 years</a></li>
+											<li><a>30 years</a></li>
 										</ul>
 									</div>
 								</td>
 								<td id="4">
 									<div class="btn-group">
-										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">30 years <span class="caret"></span></a>
+										<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown">30 years <span class="caret"></span></a>
 										<ul class="dropdown-menu">
-											<li><a href="#">10 years</a></li>
-											<li><a href="#">15 years</a></li>
-											<li><a href="#">20 years</a></li>
-											<li><a href="#">30 years</a></li>
+											<li><a>10 years</a></li>
+											<li><a>15 years</a></li>
+											<li><a>20 years</a></li>
+											<li><a>30 years</a></li>
 										</ul>
 									</div>
 								</td>
 							</tr>
-							<tr id="square-footage">
+							<tr>
+								<th class="mergedTitle" colspan="100%">Home Details</th>
+							</tr>
+							<tr id="-square-footage">
 								<th>Square Footage</th>
 								<td id="0">1,900</td>
 								<td id="1">2,900</td>
@@ -421,7 +421,7 @@
 								<td id="3">4,900</td>
 								<td id="4">5,900</td>
 							</tr>
-							<tr id="price-per-square-foot">
+							<tr id="-price-per-square-foot">
 								<th>Price per Square Foot</th>
 								<td id="0">$103.45</td>
 								<td id="1">$103.45</td>
@@ -429,7 +429,153 @@
 								<td id="3">$103.45</td>
 								<td id="4">$103.45</td>
 							</tr>
-							<tr id="delete">
+							<tr>
+								<th class="mergedTitle" colspan="100%">Loan Details</th>
+							</tr>
+							<tr id="-loan-amount">
+								<th>Loan Amount</th>
+								<td id="0">$50,000.00</td>
+								<td id="1">$150,000.00</td>
+								<td id="2">$250,000.00</td>
+								<td id="3">$350,000.00</td>
+								<td id="4">$450,000.00</td>
+							</tr>
+							<tr>
+								<th class="mergedTitle" colspan="100%">Monthly Payment Breakdown</th>
+							</tr>
+							<tr id="-monthly-mortgage-payment">
+								<th>Monthly Mortgage Payment</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr id="-monthly-property-tax">
+								<th>Monthly Property Tax</th>
+								<td id="0">$100.00</td>
+								<td id="1">$200.00</td>
+								<td id="2">$300.00</td>
+								<td id="3">$400.00</td>
+								<td id="4">$500.00</td>
+							</tr>
+							<tr id="-monthly-pmi">
+								<th>Monthly PMI</th>
+								<td id="0">$100.00</td>
+								<td id="1">$200.00</td>
+								<td id="2">$300.00</td>
+								<td id="3">$400.00</td>
+								<td id="4">$500.00</td>
+							</tr>
+							<tr id="-total-monthly-payment">
+								<th>Total Monthly Payment</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr>
+								<th class="mergedTitle" colspan="100%">Early Mortgage Payoff</th>
+							</tr>
+							<tr id="-extra-payment-months">
+								<th>Months Until Mortgage is Paid Off</th>
+								<td id="0">0</td>
+								<td id="1">0</td>
+								<td id="2">0</td>
+								<td id="3">0</td>
+								<td id="4">0</td>
+							</tr>
+							<tr id="-extra-payment-total-interest-paid">
+								<th>Total Interest Paid</th>
+								<td id="0">$10,000.00</td>
+								<td id="1">$20,000.00</td>
+								<td id="2">$30,000.00</td>
+								<td id="3">$40,000.00</td>
+								<td id="4">$50,000.00</td>
+							</tr>
+							<tr id="-total-interest-savings">
+								<th>Total Interest Savings</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr>
+								<th class="mergedTitle" colspan="100%">PMI Details</th>
+							</tr>
+							<tr id="-pmi-months">
+								<th>Months Until 20% Equity</th>
+								<td id="0">0</td>
+								<td id="1">0</td>
+								<td id="2">0</td>
+								<td id="3">0</td>
+								<td id="4">0</td>
+							</tr>
+							<tr id="-total-pmi-paid">
+								<th>Total PMI Paid</th>
+								<td id="0">$0.00</td>
+								<td id="1">$0.00</td>
+								<td id="2">$0.00</td>
+								<td id="3">$0.00</td>
+								<td id="4">$0.00</td>
+							</tr>
+							<tr>
+								<th class="mergedTitle" colspan="100%">Total Interest Paid</th>
+							</tr>
+							<tr id="-10-year-interest">
+								<th>If Paid Off in 10 Years</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr id="-15-year-interest">
+								<th>If Paid Off in 15 Years</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr id="-20-year-interest">
+								<th>If Paid Off in 20 Years</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr id="-30-year-interest">
+								<th>If Paid Off in 30 Years</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr>
+								<th class="mergedTitle" colspan="100%">Total Out Of Pocket Cost Over Life Of Loan</th>
+							</tr>
+							<tr id="-total-cost">
+								<th>Total Cost (w/o Extra Payment)</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr id="-extra-payment-total-cost">
+								<th>Total Cost (w/ Extra Payment)</th>
+								<td id="0">$1,000.00</td>
+								<td id="1">$2,000.00</td>
+								<td id="2">$3,000.00</td>
+								<td id="3">$4,000.00</td>
+								<td id="4">$5,000.00</td>
+							</tr>
+							<tr id="-delete">
 								<th style="background-color: white;"></th>
 								<td id="0" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('0')">Delete</button></td>
 								<td id="1" style="background-color: white;" align="center"><button class="btn btn-danger btn-sm" onclick="deleteCol('1')">Delete</button></td>
